hphp/hack/test/typecheck/is_expression/tuple4.php.exp
File "tuple4.php", line 7, characters 7-8:
Invalid argument (Typing[4110])
  File "tuple4.php", line 3, characters 13-15:
  This is an int
  File "tuple4.php", line 6, characters 13-58:
  It is incompatible with a tuple
File "tuple4.php", line 6, characters 14-34:
The "is" operator cannot be used with a function (Typing[4195])
File "tuple4.php", line 6, characters 37-57:
The "is" operator cannot be used with a function (Typing[4195])
File "tuple4.php", line 6, characters 14-34:
The "is" operator cannot be used with a function (Typing[4195])
