hphp/hack/test/typecheck/is_expression/tuple4.php
<?hh

function g(?int $x): void {}

function f(mixed $x): void {
  if ($x is ((function(int): ?int), (function(int): ?int))) {
    g($x);
  }
}
